fix list and scrollbar

--- a/front/src/app/routes/workforce/workforce.page.scss
+++ b/front/src/app/routes/workforce/workforce.page.scss
@@ -9,6 +9,10 @@
 
 .header-list {
   border-bottom: 1px solid rgba(fColor(cblack), 0.2);
+
+  .activities {
+    margin-right: 16px;
+  }
 }
 
 .footer-list {
